--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -37,13 +37,12 @@
                 }
                 #navbarSupportedContent{
                     ul{
+                        margin-left: -1.2rem;
                         li{
-                            background-color: $colorR;
-                            font-size: 25px;
+                            font-size: 28px;
                             padding-left: 0.5rem;
                             padding-right: 0.5rem;
-                            margin-left: 1.5rem;
-                            border: 1px white solid;
+                            border-bottom: 4px white solid;
                             &:hover{
                                 transform: scale(1.1);
                                 transition: 1s;
@@ -208,13 +207,12 @@
                 }
                 #navbarSupportedContent{
                     ul{
+                        margin-left: -1.2rem;
                         li{
-                            background-color: $colorR;
-                            font-size: 25px;
+                            font-size: 28px;
                             padding-left: 0.5rem;
                             padding-right: 0.5rem;
-                            margin-left: 1.5rem;
-                            border: 1px white solid;
+                            border-bottom: 4px white solid;
                             &:hover{
                                 transform: scale(1.1);
                                 transition: 1s;
@@ -243,7 +241,7 @@
                 text-shadow: 3px 3px $colorN;
                 font-size: 35px;
                 text-align: center;
-                margin-top: -2rem;
+                margin-top: -1rem;
             }
         }
     }
@@ -396,13 +394,12 @@
                 }
                 #navbarSupportedContent{
                     ul{
+                        margin-left: -1.2rem;
                         li{
-                            background-color: $colorR;
-                            font-size: 25px;
+                            font-size: 28px;
                             padding-left: 0.5rem;
                             padding-right: 0.5rem;
-                            margin-left: 1.5rem;
-                            border: 1px white solid;
+                            border-bottom: 4px white solid;
                             &:hover{
                                 transform: scale(1.1);
                                 transition: 1s;
@@ -431,7 +428,7 @@
                 text-shadow: 3px 3px $colorN;
                 font-size: 35px;
                 text-align: center;
-                margin-top: -2rem;
+                margin-top: -1rem;
             }
         }
     }
@@ -502,13 +499,12 @@
                 }
                 #navbarSupportedContent{
                     ul{
+                        margin-left: -1.2rem;
                         li{
-                            background-color: $colorR;
-                            font-size: 25px;
+                            font-size: 28px;
                             padding-left: 0.5rem;
                             padding-right: 0.5rem;
-                            margin-left: 1.5rem;
-                            border: 1px white solid;
+                            border-bottom: 4px white solid;
                             &:hover{
                                 transform: scale(1.1);
                                 transition: 1s;
@@ -537,7 +533,7 @@
                 text-shadow: 3px 3px $colorN;
                 font-size: 35px;
                 text-align: center;
-                margin-top: -2rem;
+                margin-top: -1rem;
             }
         }
     }
@@ -611,13 +607,12 @@
                 }
                 #navbarSupportedContent{
                     ul{
+                        margin-left: -1.2rem;
                         li{
-                            background-color: $colorR;
-                            font-size: 25px;
+                            font-size: 28px;
                             padding-left: 0.5rem;
                             padding-right: 0.5rem;
-                            margin-left: 1.5rem;
-                            border: 1px white solid;
+                            border-bottom: 4px white solid;
                             &:hover{
                                 transform: scale(1.1);
                                 transition: 1s;
