--- a/scss/utilities/_MQContactanos.scss
+++ b/scss/utilities/_MQContactanos.scss
@@ -18,6 +18,7 @@
                 div{
                     img{
                         width: 100px;
+                        border: 5px solid $colorR;
                     }
                     #navbarSupportedContent{
                         ul{
