--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -15,6 +15,7 @@
                     div{
                         img{
                             width: 100px;
+                            border: 5px solid $colorR;
                         }
                         #navbarSupportedContent{
                             ul{
