--- a/scss/utilities/_MQContactanos.scss
+++ b/scss/utilities/_MQContactanos.scss
@@ -32,9 +32,6 @@
                                 margin-left: 1.5rem;
                                 border: none;
                             }
-                            a{
-                                text-shadow: 2px 2px $colorR;
-                            }
                         }
                     }
                 }
@@ -42,10 +39,10 @@
             div{
                 h1{
                     text-shadow: 2px 2px $colorR;
-                    font-size: 35px;
+                    font-size: 30px;
                     text-align: center;
                     margin-top: 1rem;
-                    margin-bottom: 1rem;;
+                    margin-bottom: 1rem;
                 }
             }
         }
