--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@
 /* index version mobile */
 @media only screen and (max-width: 600px) {
   .bodyIndex {
-    grid-template-areas: "headerI headerI" "sectionM sectionM" "redes redes" "sectionF sectionV" "sectionF sectionV" "footer footer"; }
+    grid-template-areas: "headerI headerI" "sectionM sectionM" "redes redes" "sectionF sectionF" "sectionv sectionV" "footer footer"; }
     .bodyIndex .headerI nav {
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87));
       margin-bottom: 2rem; }
@@ -157,23 +157,19 @@
         margin-right: 0rem;
         margin-left: 1.5rem;
         border: none; }
-      .bodyIndex .headerI nav div #navbarSupportedContent ul a {
-        text-shadow: 2px 2px rgba(255, 0, 0, 0.219); }
     .bodyIndex .sectionM {
       padding-bottom: 0.5rem; }
       .bodyIndex .sectionM div h2 {
         margin-bottom: 1rem; }
     .bodyIndex .sectionF {
-      margin-left: 0.2rem; }
+      display: flex;
+      justify-content: center; }
       .bodyIndex .sectionF p {
         font-size: 30px;
-        margin-left: 1rem;
-        margin-right: 4rem;
-        margin-top: 6rem; }
+        margin-top: 2rem; }
     .bodyIndex .sectionV {
-      align-items: center; }
+      justify-content: center; }
       .bodyIndex .sectionV video {
-        margin-right: 3rem;
         margin-top: 1rem; }
     .bodyIndex .sectionR .redes {
       margin-top: 4rem;
@@ -360,11 +356,9 @@
           margin-right: 0rem;
           margin-left: 1.5rem;
           border: none; }
-        .bodyC .headerC nav div #navbarSupportedContent ul a {
-          text-shadow: 2px 2px rgba(255, 0, 0, 0.219); }
       .bodyC .headerC div h1 {
         text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
-        font-size: 35px;
+        font-size: 30px;
         text-align: center;
         margin-top: 1rem;
         margin-bottom: 1rem; }
@@ -468,7 +462,7 @@
       font-family: 'Roboto', sans-serif;
       margin-top: 20px;
       font-size: 20px;
-      padding: 10px 1px 10px 1px;
+      padding: 10px 100px 10px 100px;
       margin-bottom: 20px; }
       .bodySn main div h2 {
         font-family: 'Bebas Neue', cursive;
@@ -493,6 +487,59 @@
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
       font-family: 'Roboto', sans-serif;
       font-size: 15px; }
+
+/*sobre nosotros version mobil*/
+@media only screen and (max-width: 600px) {
+  .bodySn {
+    grid-template-areas: "headerSn headerSn" "headerSn headerSn" "mainSn mainSn" "equipo equipo" "equipo equipo" "equipo equipo" "footerSn footerSn"; }
+    .bodySn .headerSn {
+      background-image: none; }
+      .bodySn .headerSn nav {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87));
+        margin-bottom: 2rem; }
+        .bodySn .headerSn nav div img {
+          width: 100px;
+          border: 5px solid rgba(255, 0, 0, 0.219); }
+        .bodySn .headerSn nav div #navbarSupportedContent ul li {
+          text-align: center;
+          background-color: rgba(2, 2, 2, 0);
+          font-size: 25px;
+          padding-left: 0rem;
+          padding-right: 0rem;
+          margin-right: 0rem;
+          margin-left: 1.5rem;
+          border: none; }
+      .bodySn .headerSn div h1 {
+        text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+        font-size: 30px;
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem; }
+    .bodySn main div {
+      margin-top: 1rem;
+      background-color: rgba(255, 0, 0, 0.219);
+      color: white;
+      text-shadow: 1px 1px black;
+      font-family: 'Roboto', sans-serif;
+      font-size: 20px;
+      padding: 0.5rem 2rem 0.5rem 2rem;
+      margin-bottom: 20px; }
+      .bodySn main div h2 {
+        font-family: 'Bebas Neue', cursive;
+        text-align: center;
+        font-size: 25px;
+        text-decoration: underline rgba(255, 0, 0, 0.219);
+        padding-top: 5px; }
+    .bodySn .equipo {
+      padding: 0.5rem; }
+      .bodySn .equipo img {
+        width: 150px;
+        border: solid rgba(0, 0, 0, 0.87) 5px; }
+    .bodySn footer {
+      margin-top: 1rem; }
+      .bodySn footer h3 {
+        padding: 1rem;
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219); } }
 
 /* actividades */
 .bodyA {
@@ -567,6 +614,48 @@
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
       font-family: 'Roboto', sans-serif;
       font-size: 15px; }
+
+/* version mobile Actividades */
+@media only screen and (max-width: 600px) {
+  .bodyA {
+    grid-template-areas: "headerA headerA" "headerA headerA" "mainA mainA" "mainA mainA" "mainA mainA" "footerA footerA" "footerA fotterA"; }
+    .bodyA .headerA {
+      background-image: none; }
+      .bodyA .headerA nav {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87));
+        margin-bottom: 2rem; }
+        .bodyA .headerA nav div img {
+          width: 100px;
+          border: 5px solid rgba(255, 0, 0, 0.219); }
+        .bodyA .headerA nav div #navbarSupportedContent ul li {
+          text-align: center;
+          background-color: rgba(2, 2, 2, 0);
+          font-size: 25px;
+          padding-left: 0rem;
+          padding-right: 0rem;
+          margin-right: 0rem;
+          margin-left: 1.5rem;
+          border: none; }
+      .bodyA .headerA div h1 {
+        text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+        font-size: 30px;
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem; }
+    .bodyA main h2 {
+      margin-bottom: 1rem;
+      font-size: 50px;
+      text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+      text-align: center;
+      background-color: rgba(0, 0, 0, 0.87); }
+    .bodyA main div table {
+      font-size: 30px;
+      margin-bottom: 0.5rem; }
+    .bodyA footer {
+      margin-top: 1rem; }
+      .bodyA footer h2 {
+        padding: 1rem;
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219); } }
 
 /* galeria */
 .bodyG {
