--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -5,8 +5,8 @@
         grid-template-areas:"headerI headerI"
                             "sectionM sectionM"
                             "redes redes"
-                            "sectionF sectionV"
-                            "sectionF sectionV"
+                            "sectionF sectionF"
+                            "sectionv sectionV"
                             "footer footer";
         .headerI{
             nav{
@@ -29,9 +29,6 @@
                                     margin-left: 1.5rem;
                                     border: none;
                                 }
-                                a{ 
-                                    text-shadow: 2px 2px $colorR;
-                                }
                             }
                         }
                     }
@@ -46,18 +43,16 @@
             }
         }
         .sectionF{
-            margin-left: 0.2rem;
+            display: flex;
+            justify-content: center;
             p{
                 font-size: 30px;
-                margin-left: 1rem;
-                margin-right: 4rem;
-                margin-top: 6rem;
+                margin-top: 2rem;
             }
         }
         .sectionV{
-            align-items: center;
+            justify-content: center;
             video{
-                margin-right: 3rem;
                 margin-top: 1rem;
             }
         }
