--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -551,7 +551,7 @@
             background-color: $colorN;
         }
         div{
-            table{
+            .table{
                 font-family: 'Bebas Neue', cursive;
                 font-size: 40px;
                 margin-bottom: 1px;
@@ -564,8 +564,12 @@
                 }
             }
             tbody{
-                th, td{
-                    width: 50%;
+                tr{
+                    td{
+                        div{
+                            font-size: 30px;
+                        }
+                    }
                 }
             }
         }
