--- a/scss/utilities/_MQActividades.scss
+++ b/scss/utilities/_MQActividades.scss
@@ -54,10 +54,19 @@
                 background-color: $colorN;
             }
             div{
-                table{
-                    
-                    font-size: 30px;
+                .table{
+                    font-size: 25px;
                     margin-bottom: 0.5rem;
+                }
+                tbody{
+                    tr{
+                        td{
+                            div{
+                                font-size: 20px;
+                                padding-bottom: 1.5rem;
+                            }
+                        }
+                    }
                 }
             }
         }
