--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -6,34 +6,34 @@
                             "sectionM sectionM"
                             "redes redes"
                             "sectionF sectionF"
-                            "sectionv sectionV"
+                            "sectionV sectionV"
                             "footer footer";
         .headerI{
             nav{
-                    background-image:linear-gradient(to right, $colorN, $colorN);
-                    margin-bottom: 2rem;
-                    div{
-                        img{
-                            width: 100px;
-                            border: 5px solid $colorR;
-                        }
-                        #navbarSupportedContent{
-                            ul{
-                                li{
-                                    text-align:center;
-                                   background-color: rgba(2, 2, 2, 0);
-                                    font-size: 25px;
-                                    padding-left: 0rem;
-                                    padding-right: 0rem;
-                                    margin-right: 0rem;
-                                    margin-left: 1.5rem;
-                                    border: none;
-                                }
+                background-image:linear-gradient(to right, $colorN, $colorN);
+                margin-bottom: 2rem;
+                div{
+                    img{
+                        width: 100px;
+                        border: 5px solid $colorR;
+                    }
+                    #navbarSupportedContent{
+                        ul{
+                            li{
+                                text-align:center;
+                                background-color: rgba(2, 2, 2, 0);
+                                font-size: 25px;
+                                padding-left: 0rem;
+                                padding-right: 0rem;
+                                margin-right: 0rem;
+                                margin-left: 1.5rem;
+                                border: none;
                             }
                         }
                     }
                 }
             }
+        }
         .sectionM{
             padding-bottom: 0.5rem;
             div{
@@ -44,16 +44,19 @@
         }
         .sectionF{
             display: flex;
-            justify-content: center;
+            align-items: center;
             p{
+                display: flex;
+                align-items: center;
                 font-size: 30px;
                 margin-top: 2rem;
             }
         }
         .sectionV{
-            justify-content: center;
+            display: flex;
+            align-items: center;   
             video{
-                margin-top: 1rem;
+                margin-bottom: 1rem;                
             }
         }
         .sectionR{
@@ -81,15 +84,31 @@
             }
         }
         footer{
-            // me falta agregar imagenes con link a las redes sociales al footer para hacerlo mas grande
-            align-items: flex-end;
-            justify-content: end;
+            grid-area: footer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             background-color: $colorN;
-            margin-top: 5rem;
+            padding-top: 1rem;
             h4{
+                color: white;
                 text-shadow: 1px 1px $colorR;
-                font-size: 15px ;
-                margin-right: 0.5rem;
+                font-family: 'Roboto', sans-serif;
+                font-size: 10px;
+            }
+            a{
+                padding: 0.5rem;
+                padding-bottom: 0.8rem;
+            }
+            img{
+                width: 20px;
+                &:hover{
+                    width: 30px;
+                    border-radius: 50%;
+                    border: 3px red solid;
+                    transform: scale(1.1);
+                    transition: 500ms ease;
+                }
             }
         }
     }        
