--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,13 @@
-.bodyIndex footer, .bodyC footer, .bodySn footer, .bodyA footer, .bodyG footer {
+.bodyG footer {
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end; }
+  align-items: center;
+  justify-content: center; }
+
+.bodyC footer, .bodySn footer, .bodyA footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
 
 * {
   padding: 0;
@@ -15,7 +21,7 @@
   background-size: cover;
   background-repeat: repeat;
   display: grid;
-  grid-template-areas: "headerI headerI headerI" "sectionM sectionM sectionM" "sectionF redes sectionV" "sectionF redes sectionV" "footer footer footer"; }
+  grid-template-areas: "headerI headerI headerI" "sectionM sectionM sectionM" "sectionF redes sectionV" "sectionF redes sectionV" "footer footer footer" "footer footer footer"; }
   .bodyIndex .headerI {
     grid-area: headerI; }
     .bodyIndex .headerI nav {
@@ -71,8 +77,7 @@
   .bodyIndex .sectionF {
     grid-area: sectionF;
     display: flex;
-    justify-content: flex-start;
-    margin-left: 20px; }
+    justify-content: center; }
     .bodyIndex .sectionF p {
       display: flex;
       flex-direction: column;
@@ -80,7 +85,6 @@
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
       font-family: 'Anton', sans-serif;
-      margin-left: 60px;
       margin-top: 30px;
       animation-name: latir;
       animation-iteration-count: infinite;
@@ -90,11 +94,10 @@
   .bodyIndex .sectionV {
     grid-area: sectionV;
     display: flex;
-    justify-content: end; }
+    justify-content: center; }
     .bodyIndex .sectionV video {
       width: 300px;
       border: solid 5px rgba(255, 0, 0, 0.219);
-      margin-right: 100px;
       margin-top: 1rem; }
   .bodyIndex .sectionR {
     grid-area: redes; }
@@ -130,18 +133,32 @@
           transition: 300ms ease; }
   .bodyIndex footer {
     grid-area: footer;
-    background-color: rgba(0, 0, 0, 0.87); }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.87);
+    padding-top: 1rem; }
     .bodyIndex footer h4 {
       color: white;
-      text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+      text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
       font-family: 'Roboto', sans-serif;
-      font-size: 15px;
+      font-size: 20px;
       margin-right: 5px; }
+    .bodyIndex footer a {
+      padding-left: 1rem; }
+    .bodyIndex footer img {
+      width: 30px;
+      border-radius: 50%; }
+      .bodyIndex footer img:hover {
+        border-radius: 50%;
+        border: 3px red solid;
+        transform: scale(1.3);
+        transition: 500ms ease; }
 
 /* index version mobile */
 @media only screen and (max-width: 600px) {
   .bodyIndex {
-    grid-template-areas: "headerI headerI" "sectionM sectionM" "redes redes" "sectionF sectionF" "sectionv sectionV" "footer footer"; }
+    grid-template-areas: "headerI headerI" "sectionM sectionM" "redes redes" "sectionF sectionF" "sectionV sectionV" "footer footer"; }
     .bodyIndex .headerI nav {
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87));
       margin-bottom: 2rem; }
@@ -163,14 +180,17 @@
         margin-bottom: 1rem; }
     .bodyIndex .sectionF {
       display: flex;
-      justify-content: center; }
+      align-items: center; }
       .bodyIndex .sectionF p {
+        display: flex;
+        align-items: center;
         font-size: 30px;
         margin-top: 2rem; }
     .bodyIndex .sectionV {
-      justify-content: center; }
+      display: flex;
+      align-items: center; }
       .bodyIndex .sectionV video {
-        margin-top: 1rem; }
+        margin-bottom: 1rem; }
     .bodyIndex .sectionR .redes {
       margin-top: 4rem;
       text-align: center; }
@@ -189,14 +209,28 @@
       .bodyIndex .sectionR .redes2 img {
         width: 75px; }
     .bodyIndex footer {
-      align-items: flex-end;
-      justify-content: end;
+      grid-area: footer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       background-color: rgba(0, 0, 0, 0.87);
-      margin-top: 5rem; }
+      padding-top: 1rem; }
       .bodyIndex footer h4 {
+        color: white;
         text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
-        font-size: 15px;
-        margin-right: 0.5rem; } }
+        font-family: 'Roboto', sans-serif;
+        font-size: 10px; }
+      .bodyIndex footer a {
+        padding: 0.5rem;
+        padding-bottom: 0.8rem; }
+      .bodyIndex footer img {
+        width: 20px; }
+        .bodyIndex footer img:hover {
+          width: 30px;
+          border-radius: 50%;
+          border: 3px red solid;
+          transform: scale(1.1);
+          transition: 500ms ease; } }
 
 /* contactanos*/
 .bodyC {
@@ -327,13 +361,41 @@
   .bodyC footer {
     grid-area: footerC;
     margin-top: 2rem;
-    background-color: rgba(0, 0, 0, 0.87); }
+    background-color: rgba(0, 0, 0, 0.87);
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
     .bodyC footer h4 {
-      padding: 10px;
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
       font-family: 'Roboto', sans-serif;
-      font-size: 15px; }
+      font-size: 25px;
+      padding-bottom: 1rem; }
+    .bodyC footer div {
+      margin-bottom: 1.5rem; }
+      .bodyC footer div a {
+        padding: 1rem; }
+      .bodyC footer div img {
+        width: 40px;
+        border-radius: 50%; }
+        .bodyC footer div img:hover {
+          border-radius: 50%;
+          border: 3px red solid;
+          transform: scale(1.3);
+          transition: 800ms ease; }
+    .bodyC footer h5 {
+      color: white;
+      text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+      font-family: 'Roboto', sans-serif;
+      font-size: 20px;
+      padding-bottom: 1rem; }
+    .bodyC footer img {
+      width: 30px;
+      border-radius: 50%; }
+      .bodyC footer img:hover {
+        border-radius: 50%;
+        border: 3px red solid;
+        transform: scale(1.3);
+        transition: 800ms ease; }
 
 /* contactanos version mobile */
 @media only screen and (max-width: 600px) {
@@ -406,10 +468,19 @@
       .bodyC .formu .contForm form fieldset .ayuda {
         display: none; }
     .bodyC footer {
-      margin-top: 1rem; }
+      align-items: center;
+      margin-top: 1rem;
+      padding-top: 1rem;
+      padding-bottom: 1rem; }
       .bodyC footer h4 {
-        padding: 1rem;
-        text-shadow: 1px 1px rgba(255, 0, 0, 0.219); } }
+        color: white;
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
+        font-size: 15px; }
+      .bodyC footer div img {
+        width: 30px; }
+      .bodyC footer h5 {
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
+        font-size: 12px; } }
 
 /* Sobre nosotros */
 .bodySn {
@@ -480,13 +551,41 @@
   .bodySn footer {
     grid-area: footerSn;
     margin-top: 2rem;
-    background-color: rgba(0, 0, 0, 0.87); }
+    background-color: rgba(0, 0, 0, 0.87);
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
     .bodySn footer h3 {
-      padding: 10px;
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
       font-family: 'Roboto', sans-serif;
-      font-size: 15px; }
+      font-size: 25px;
+      padding-bottom: 1rem; }
+    .bodySn footer div {
+      margin-bottom: 1.5rem; }
+      .bodySn footer div a {
+        padding: 1rem; }
+      .bodySn footer div img {
+        width: 40px;
+        border-radius: 50%; }
+        .bodySn footer div img:hover {
+          border-radius: 50%;
+          border: 3px red solid;
+          transform: scale(1.3);
+          transition: 800ms ease; }
+    .bodySn footer h4 {
+      color: white;
+      text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+      font-family: 'Roboto', sans-serif;
+      font-size: 20px;
+      padding-bottom: 1rem; }
+    .bodySn footer img {
+      width: 30px;
+      border-radius: 50%; }
+      .bodySn footer img:hover {
+        border-radius: 50%;
+        border: 3px red solid;
+        transform: scale(1.3);
+        transition: 800ms ease; }
 
 /*sobre nosotros version mobil*/
 @media only screen and (max-width: 600px) {
@@ -536,10 +635,19 @@
         width: 150px;
         border: solid rgba(0, 0, 0, 0.87) 5px; }
     .bodySn footer {
-      margin-top: 1rem; }
+      align-items: center;
+      margin-top: 1rem;
+      padding-top: 1rem;
+      padding-bottom: 1rem; }
       .bodySn footer h3 {
-        padding: 1rem;
-        text-shadow: 1px 1px rgba(255, 0, 0, 0.219); } }
+        color: white;
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
+        font-size: 15px; }
+      .bodySn footer div img {
+        width: 30px; }
+      .bodySn footer h4 {
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
+        font-size: 12px; } }
 
 /* actividades */
 .bodyA {
@@ -607,13 +715,41 @@
   .bodyA footer {
     grid-area: footerA;
     margin-top: 2rem;
-    background-color: rgba(0, 0, 0, 0.87); }
+    background-color: rgba(0, 0, 0, 0.87);
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
     .bodyA footer h2 {
-      padding: 10px;
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
       font-family: 'Roboto', sans-serif;
-      font-size: 15px; }
+      font-size: 25px;
+      padding-bottom: 1rem; }
+    .bodyA footer div {
+      margin-bottom: 1.5rem; }
+      .bodyA footer div a {
+        padding: 1rem; }
+      .bodyA footer div img {
+        width: 40px;
+        border-radius: 50%; }
+        .bodyA footer div img:hover {
+          border-radius: 50%;
+          border: 3px red solid;
+          transform: scale(1.3);
+          transition: 800ms ease; }
+    .bodyA footer h3 {
+      color: white;
+      text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+      font-family: 'Roboto', sans-serif;
+      font-size: 20px;
+      padding-bottom: 1rem; }
+    .bodyA footer img {
+      width: 30px;
+      border-radius: 50%; }
+      .bodyA footer img:hover {
+        border-radius: 50%;
+        border: 3px red solid;
+        transform: scale(1.3);
+        transition: 800ms ease; }
 
 /* version mobile Actividades */
 @media only screen and (max-width: 600px) {
