--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -23,6 +23,7 @@
                         "sectionM sectionM sectionM"
                         "sectionF redes sectionV"
                         "sectionF redes sectionV"
+                        "footer footer footer"
                         "footer footer footer";
     .headerI{
         grid-area: headerI;
@@ -98,8 +99,7 @@
     .sectionF{
         grid-area: sectionF;
         display: flex;
-        justify-content: flex-start;
-        margin-left: 20px;
+        justify-content: center;
         p{
             display: flex;
             flex-direction: column;
@@ -107,7 +107,6 @@
             color: white;
             text-shadow: 2px 2px $colorR;
             font-family: 'Anton', sans-serif;
-            margin-left: 60px;
             margin-top: 30px;
             animation-name: latir;
             animation-iteration-count: infinite;
@@ -120,11 +119,10 @@
     .sectionV{
         grid-area: sectionV;
         display: flex;
-        justify-content: end;
+        justify-content: center;
         video{
             width: 300px ;
             border:solid 5px $colorR;
-            margin-right: 100px;
             margin-top: 1rem;
         }
     }
@@ -169,15 +167,31 @@
     }
     footer{
         grid-area: footer;
-        @extend %footer-flex;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-color: $colorN;
+        padding-top: 1rem;
         h4{
             color: white;
-            text-shadow: 2px 2px $colorR;
+            text-shadow: 1px 1px $colorR;
             font-family: 'Roboto', sans-serif;
-            font-size: 15px ;
+            font-size: 20px;
             margin-right: 5px;  
         }
+        a{
+            padding-left: 1rem;
+        }
+        img{
+            width: 30px;
+            border-radius: 50%;
+            &:hover{
+                border-radius: 50%;
+                border: 3px red solid;
+                transform: scale(1.3);
+                transition: 500ms ease;
+            }
+        }  
     }
 }
 /* index version mobile */ 
@@ -357,15 +371,50 @@
     }
     footer{
         grid-area: footerC;
-        @extend %footer-flex;
+        @extend %footer-column;
         margin-top: 2rem;
         background-color: $colorN;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
         h4{
-            padding: 10px;
             color: white;
             text-shadow: 2px 2px $colorR;
             font-family: 'Roboto', sans-serif;
-            font-size: 15px ; 
+            font-size: 25px;
+            padding-bottom: 1rem;
+        }
+        div{
+            margin-bottom: 1.5rem;
+            a{
+                padding: 1rem;
+            }
+            img{
+                width: 40px;
+                border-radius: 50%;
+                &:hover{
+                    border-radius: 50%;
+                    border: 3px red solid;
+                    transform: scale(1.3);
+                    transition: 800ms ease;
+                }
+            }
+        }
+        h5{
+            color: white;
+            text-shadow: 2px 2px $colorR;
+            font-family: 'Roboto', sans-serif;
+            font-size: 20px;
+            padding-bottom: 1rem;
+        }
+        img{
+            width: 30px;
+            border-radius: 50%;
+            &:hover{
+                border-radius: 50%;
+                border: 3px red solid;
+                transform: scale(1.3);
+                transition: 800ms ease;
+            }
         }
     }
 }
@@ -463,15 +512,50 @@
     }
     footer{
         grid-area: footerSn;
-        @extend %footer-flex;
+        @extend %footer-column;
         margin-top: 2rem;
         background-color: $colorN;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
         h3{
-            padding: 10px;
             color: white;
             text-shadow: 2px 2px $colorR;
             font-family: 'Roboto', sans-serif;
-            font-size: 15px; 
+            font-size: 25px;
+            padding-bottom: 1rem; 
+        }
+        div{
+            margin-bottom: 1.5rem;
+            a{
+                padding: 1rem;
+            }
+            img{
+                width: 40px;
+                border-radius: 50%;
+                &:hover{
+                    border-radius: 50%;
+                    border: 3px red solid;
+                    transform: scale(1.3);
+                    transition: 800ms ease;
+                }
+            }
+        }
+        h4{
+            color: white;
+            text-shadow: 2px 2px $colorR;
+            font-family: 'Roboto', sans-serif;
+            font-size: 20px;
+            padding-bottom: 1rem;
+        }
+        img{
+            width: 30px;
+            border-radius: 50%;
+            &:hover{
+                border-radius: 50%;
+                border: 3px red solid;
+                transform: scale(1.3);
+                transition: 800ms ease;
+            }
         }
     }
 }
@@ -576,16 +660,51 @@
     }
     footer{
         grid-area: footerA;
-        @extend %footer-flex;
+        @extend %footer-column;
         margin-top: 2rem;
         background-color: $colorN;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
         h2{
-            padding: 10px;
             color: white;
             text-shadow: 2px 2px $colorR;
             font-family: 'Roboto', sans-serif;
-            font-size: 15px ; 
+            font-size: 25px;
+            padding-bottom: 1rem; 
         }
+        div{
+            margin-bottom: 1.5rem;
+            a{
+                padding: 1rem;
+            }
+            img{
+                width: 40px;
+                border-radius: 50%;
+                &:hover{
+                    border-radius: 50%;
+                    border: 3px red solid;
+                    transform: scale(1.3);
+                    transition: 800ms ease;
+                }
+            }
+        }
+        h3{
+            color: white;
+            text-shadow: 2px 2px $colorR;
+            font-family: 'Roboto', sans-serif;
+            font-size: 20px;
+            padding-bottom: 1rem;
+        }
+        img{
+            width: 30px;
+            border-radius: 50%;
+            &:hover{
+                border-radius: 50%;
+                border: 3px red solid;
+                transform: scale(1.3);
+                transition: 800ms ease;
+            }
+        }    
     }
 }
 
