--- a/scss/utilities/_MQContactanos.scss
+++ b/scss/utilities/_MQContactanos.scss
@@ -113,10 +113,23 @@
             }
         }
         footer{
+            align-items: center;
             margin-top: 1rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
             h4{
-                padding: 1rem;
+                color: white;
                 text-shadow: 1px 1px $colorR;
+                font-size: 15px;
+            }
+            div{
+                img{
+                    width: 30px;
+                }
+            }
+            h5{
+                text-shadow: 1px 1px $colorR;
+                font-size: 12px;
             }
         }                    
     }
