--- a/scss/utilities/_MQSobreNosotros.scss
+++ b/scss/utilities/_MQSobreNosotros.scss
@@ -72,10 +72,23 @@
             }
         }
         footer{
+            align-items: center;
             margin-top: 1rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
             h3{
-                padding: 1rem;
+                color: white;
                 text-shadow: 1px 1px $colorR;
+                font-size: 15px;
+            }
+            div{
+                img{
+                    width: 30px;
+                }
+            }
+            h4{
+                text-shadow: 1px 1px $colorR;
+                font-size: 12px;
             }
         }
     }
