--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -636,6 +636,7 @@
         }
         div{
             .table{
+                background-color: $colorR;
                 font-family: 'Bebas Neue', cursive;
                 font-size: 40px;
                 margin-bottom: 1px;
