--- a/scss/utilities/_MQIndex.scss
+++ b/scss/utilities/_MQIndex.scss
@@ -55,7 +55,7 @@
         .sectionV{
             display: flex;
             align-items: center;   
-            video{
+            iframe{
                 margin-bottom: 1rem;                
             }
         }
