--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,4 @@
-.bodyG footer {
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-.bodyC footer, .bodySn footer, .bodyA footer {
+.bodyC footer, .bodySn footer, .bodyA footer, .bodyG footer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -95,10 +90,11 @@
     grid-area: sectionV;
     display: flex;
     justify-content: center; }
-    .bodyIndex .sectionV video {
+    .bodyIndex .sectionV iframe {
       width: 300px;
       border: solid 5px rgba(255, 0, 0, 0.219);
-      margin-top: 1rem; }
+      margin-top: 1rem;
+      margin-bottom: 1rem; }
   .bodyIndex .sectionR {
     grid-area: redes; }
     .bodyIndex .sectionR .redes {
@@ -189,7 +185,7 @@
     .bodyIndex .sectionV {
       display: flex;
       align-items: center; }
-      .bodyIndex .sectionV video {
+      .bodyIndex .sectionV iframe {
         margin-bottom: 1rem; }
     .bodyIndex .sectionR .redes {
       margin-top: 4rem;
@@ -862,26 +858,64 @@
     .bodyG main div {
       text-align: center; }
       .bodyG main div h3 {
-        margin: 10px;
+        margin: 1rem;
         font-family: 'Bebas Neue', cursive;
         font-size: 35px;
         color: white;
         text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
         text-align: center;
         background-color: rgba(0, 0, 0, 0.87); }
-      .bodyG main div p img {
-        width: 400px;
-        border: solid rgba(0, 0, 0, 0.87) 5px; }
-      .bodyG main div p .img2 {
-        width: 230px;
-        border: solid rgba(0, 0, 0, 0.87) 5px; }
+      .bodyG main div p {
+        padding: 1rem; }
+        .bodyG main div p img {
+          width: 300px;
+          height: 300px;
+          padding: 0.2rem;
+          background-color: rgba(255, 0, 0, 0.219);
+          border-radius: 5%; }
+          .bodyG main div p img:hover {
+            transform: scale(1.3);
+            transition: 1s; }
+    .bodyG main div iframe {
+      width: 400px;
+      height: 350px;
+      padding: 1rem;
+      background-color: rgba(255, 0, 0, 0.219); }
   .bodyG footer {
     grid-area: footerG;
     margin-top: 2rem;
-    background-color: rgba(0, 0, 0, 0.87); }
+    background-color: rgba(0, 0, 0, 0.87);
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
     .bodyG footer h4 {
-      padding: 10px;
       color: white;
       text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
       font-family: 'Roboto', sans-serif;
-      font-size: 15px; }
+      font-size: 25px;
+      padding-bottom: 1rem; }
+    .bodyG footer div {
+      margin-bottom: 1.5rem; }
+      .bodyG footer div a {
+        padding: 1rem; }
+      .bodyG footer div img {
+        width: 40px;
+        border-radius: 50%; }
+        .bodyG footer div img:hover {
+          border-radius: 50%;
+          border: 3px red solid;
+          transform: scale(1.3);
+          transition: 800ms ease; }
+    .bodyG footer h5 {
+      color: white;
+      text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+      font-family: 'Roboto', sans-serif;
+      font-size: 20px;
+      padding-bottom: 1rem; }
+    .bodyG footer img {
+      width: 30px;
+      border-radius: 50%; }
+      .bodyG footer img:hover {
+        border-radius: 50%;
+        border: 3px red solid;
+        transform: scale(1.3);
+        transition: 800ms ease; }
