--- a/css/main.css
+++ b/css/main.css
@@ -865,6 +865,8 @@
         text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
         text-align: center;
         background-color: rgba(0, 0, 0, 0.87); }
+      .bodyG main div #carouselExampleFade {
+        display: none; }
       .bodyG main div p {
         padding: 1rem; }
         .bodyG main div p img {
@@ -919,3 +921,65 @@
         border: 3px red solid;
         transform: scale(1.3);
         transition: 800ms ease; }
+
+/*mediaquerie version mobile de Galeria*/
+@media only screen and (max-width: 600px) {
+  .bodyG {
+    grid-template-areas: "headerG headerG" "headerG headerG" "mainG mainG" "mainG mainG" "mainG mainG" "footerG footerG"; }
+    .bodyG .headerG {
+      background-image: none; }
+      .bodyG .headerG nav {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87));
+        margin-bottom: 2rem; }
+        .bodyG .headerG nav div img {
+          width: 100px;
+          border: 5px solid rgba(255, 0, 0, 0.219); }
+        .bodyG .headerG nav div #navbarSupportedContent ul li {
+          text-align: center;
+          background-color: rgba(2, 2, 2, 0);
+          font-size: 25px;
+          padding-left: 0rem;
+          padding-right: 0rem;
+          margin-right: 0rem;
+          margin-left: 1.5rem;
+          border: none; }
+      .bodyG .headerG div h1 {
+        text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+        font-size: 30px;
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem; }
+    .bodyG main h2 {
+      margin-bottom: 1rem;
+      font-size: 50px; }
+    .bodyG main div h3 {
+      margin: 0.5rem;
+      font-size: 30px;
+      color: white;
+      text-shadow: 2px 2px rgba(255, 0, 0, 0.219);
+      text-align: center;
+      background-color: rgba(0, 0, 0, 0.87); }
+    .bodyG main div #carouselExampleFade {
+      display: block;
+      margin: auto; }
+    .bodyG main div p {
+      display: none; }
+    .bodyG main div iframe {
+      width: 330px;
+      height: 250px;
+      padding: 1rem;
+      background-color: rgba(255, 0, 0, 0.219); }
+    .bodyG footer {
+      align-items: center;
+      margin-top: 1rem;
+      padding-top: 1rem;
+      padding-bottom: 1rem; }
+      .bodyG footer h4 {
+        color: white;
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
+        font-size: 15px; }
+      .bodyG footer div img {
+        width: 30px; }
+      .bodyG footer h5 {
+        text-shadow: 1px 1px rgba(255, 0, 0, 0.219);
+        font-size: 12px; } }
