--- a/scss/utilities/_MQActividades.scss
+++ b/scss/utilities/_MQActividades.scss
@@ -1,6 +1,6 @@
-// media queries version mobil de actividades
+// media queries version mobil y tablet de actividades
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:1023px){
     .bodyA{
         grid-template-areas:"headerA headerA"
                             "headerA headerA"
@@ -87,7 +87,7 @@
             }
             h3{
                 text-shadow: 1px 1px $colorR;
-                font-size: 12px;
+                font-size: 10px;
             }
         }
     }
