--- a/scss/utilities/_MQGaleria.scss
+++ b/scss/utilities/_MQGaleria.scss
@@ -1,6 +1,6 @@
-// media queries version mobil de galeria
+// media queries version mobil y tablet de galeria
 
-@media only screen and (max-width:600px){
+@media only screen and (max-width:1023px){
     .bodyG{
         grid-template-areas:"headerG headerG"
                             "headerG headerG"
@@ -59,6 +59,8 @@
                     background-color: $colorN;
                 }
                 #carouselExampleFade{
+                    background-color: $colorR;
+                    padding: 1.5rem;
                     display: block;
                     margin: auto;
                 }
@@ -92,7 +94,7 @@
             }
             h5{
                 text-shadow: 1px 1px $colorR;
-                font-size: 12px;
+                font-size: 10px;
             }
         }
     }
